remove null from login failed toast, remove userAuthState variable to fix displayName not always updating, hide subscription warning, remove '~' from limit values, fix words resource formatting warning

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -33,8 +33,8 @@
 
     <!-- Terms Screens -->
     <string name="upgrade">Ascender de Categoría</string>
-    <string name="remove_limits_ads">Elimine todos los límites de solicitud y respuesta, y elimine
-        todos los anuncios: próximamente!</string>
+    <string name="remove_limits_ads">¡Elimine todos los límites de solicitud y respuesta, y elimine
+        todos los anuncios! Muy pronto…</string>
     <string name="subscribe">Suscribir</string>
     <string name="testing_warning">***ADVERTENCIA: la suscripción está en desarrollo temprano. Al
         suscribirse, ha aceptado contribuir a probar la función, lo que puede no resultar en la
