--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -34,7 +34,7 @@
     <!-- Terms Screens -->
     <string name="upgrade">Mise à niveau</string>
     <string name="remove_limits_ads">Supprimez toutes les limites d\'invites et de réponses, et
-        supprimez toutes les publicités : bientôt disponible !</string>
+        supprimez toutes les publicités ! Bientôt disponible…</string>
     <string name="subscribe">S\'abonner</string>
     <string name="testing_warning">***AVERTISSEMENT : l\'abonnement est en cours de
         développement. En vous abonnant, vous avez accepté de contribuer au test de la
