--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -52,7 +52,8 @@
         y vuelva a intentarlo..</string>
     <string name="toast_device_no_subscriptions">Lo sentimos, su dispositivo no admite suscripciones.</string>
     <string name="toast_problem_loading_subscription_details">Problem connecting to Google billing.</string>
-    <string name="html_app_privacy_policy"><a href="https://chatgpt3-android.app/privacy-policy.html">Política de Privacidad, Términos</a></string>
+    <string name="html_app_terms_of_use"><a href="https://chatgpt3-android.app/terms-of-use.html">Términos de Uso</a></string>
+    <string name="html_app_privacy_policy"><a href="https://chatgpt3-android.app/privacy-policy.html">Política de Privacidad</a></string>
     <string name="html_openai_terms_of_use"><a href="https://openai.com/terms/">Términos de Uso</a></string>
     <string name="html_openai_privacy_policy"><a href="https://openai.com/privacy/">Política de Privacidad</a></string>
     <string name="login">Acceso</string>
