--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -55,7 +55,8 @@
     <string name="toast_device_no_subscriptions">Désolé, votre appareil ne prend pas en charge
         les abonnements.</string>
     <string name="toast_problem_loading_subscription_details">Problem connecting to Google billing.</string>
-    <string name="html_app_privacy_policy"><a href="https://chatgpt3-android.app/privacy-policy.html">Politique de confidentialité, Termes</a></string>
+    <string name="html_app_terms_of_use"><a href="https://chatgpt3-android.app/terms-of-use.html">Termes d\'utilisation</a></string>
+    <string name="html_app_privacy_policy"><a href="https://chatgpt3-android.app/privacy-policy.html">Politique de confidentialité</a></string>
     <string name="html_openai_terms_of_use"><a href="https://openai.com/terms/">Termes d\'utilisation</a></string>
     <string name="html_openai_privacy_policy"><a href="https://openai.com/privacy/">Politique de confidentialité</a></string>
     <string name="login">Connexion</string>
