add teaser chat audio dictation button, add subscription field to user, remove isEmailVerified, phone fields from user,

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -71,5 +71,6 @@
     <string name="account_label_prompt_limit">Límite de solicitud:</string>
     <string name="account_label_response_limit">Límite de respuesta:</string>
     <string name="words">palabras</string>
+    <string name="response_dictation_requires_subscription">Dictado de respuesta próximamente…</string>
 
 </resources>
