--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="admob_app_id" translatable="false">ca-app-pub-9043912704472803~9575294075</string>
     <string name="chatgpt3_playstore_link" translatable="false">https://play.google.com/store/apps/details?id=org.bitanon.chatgpt3</string>
     <string name="app_name" translatable="false">ChatGPT3</string>
+    <string name="audio_icon_auto" translatable="false">🔊</string>
+    <string name="audio_icon_manual" translatable="false">🔈</string>
 
     <!-- DO translate -->
     <string name="second_fragment_label">Second Fragment</string>
@@ -69,5 +71,7 @@
     <string name="account_label_prompt_limit">Prompt Limit:</string>
     <string name="account_label_response_limit">Response Limit:</string>
     <string name="words">%1$s words</string>
+    <string name="response_dictation_requires_subscription">Response dictation coming soon…</string>
+
 
 </resources>
