string tweaks, update appcompat dependency

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -83,7 +83,7 @@
     <string name="random_prompt_5">¿Están los humanos causando el cambio climático?</string>
     <string name="random_prompt_6">¿La IA esclavizará a la humanidad?</string>
     <string name="random_prompt_7">Escribe un breve poema sobre la compra de Twitter de Elon Musk</string>
-    <string name="random_prompt_8">Generar tl;dr para La Biblia</string>
+    <string name="random_prompt_8">Generar tl;dr para el Corán</string>
     <string name="random_prompt_9">¿Qué es Bitcoin?</string>
     <string name="random_prompt_10">¿Es una buena idea comprar Bitcoin?</string>
     <string name="random_prompt_11">Cuéntame un chiste gracioso</string>
