--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="random_prompt_5">Are humans causing climate change?</string>
     <string name="random_prompt_6">Will AI enslave humanity?</string>
     <string name="random_prompt_7">Write a short poem about Elon Musk buying Twitter</string>
-    <string name="random_prompt_8">Generate tl;dr for The Bible</string>
+    <string name="random_prompt_8">Generate tl;dr for the Quran</string>
     <string name="random_prompt_9">What is Bitcoin?</string>
     <string name="random_prompt_10">Is it a good idea to buy Bitcoin?</string>
     <string name="random_prompt_11">Tell me a funny joke</string>
